# framework-project

./: .gitignore  API Plan.txt  Dockerfile  Notes.md  Notes.txt  README.md  build.sh  run.sh  serverlauncher.sh
axum_app/: Cargo.toml
axum_app/dynamic/: axum_dynamic_page.jinja
axum_app/src/: Cargo.toml  main.rs
axum_app/src/src/: main.rs
axum_app/src/templates/: axum_dynamic_page.jinja
axum_app/static/: axum_static_page.html
django_app/djangoapp/: settings.py  urls.py
django_app/users/: views.py
dotnet_app/: Program.cs  dotnet_app.csproj  dotnet_app.http  dotnet_app.sln  notes.txt
dotnet_app/Models/: PasswordHash.cs
dotnet_app/Pages/Dynamic/: dotnet_dynamic_page.cshtml  (+1 more)
dotnet_app/src/: Program.cs
dotnet_app/wwwroot/: dotnet_dynamic_page.html  dotnet_static_page.html
express_app/: index.js  package-lock.json  package.json
express_app/dynamic/: express_dynamic_page.pug
express_app/src/: index.js  package-lock.json
express_app/static/: express_static_page.html
gin_app/: go.mod  go.sum  main.go
gin_app/dynamic/: gin_dynamic_page.tmpl
gin_app/src/: main.go
gin_app/static/: gin_static_page.html
rails_app/: Dockerfile
rails_app/config/: credentials.yml.enc
spring_app/: build.gradle
static/: gin_static_page.html
templates/: axum_dynamic_page.html  express_dynamic_page.html  gin_dynamic_page.html
test_scripts/: README  archivedata.sh  awsts-experimental.sh  awsts.sh  getmetric.sh  parseusage.sh  plot.R  plotlatency.R  plotusage.R  runtests-experimental.sh  runtests.sh  test-get.sh  test-hashing.sh  watchresources.sh
(+8 files in other folders)
