[package]
name = "axum_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.16.0"
minijinja = "2.8.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
